# Ciaren

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BRAND_GUIDELINES.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY-AUDIT.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  architecture.md  codecov.yml  docker-compose.yml
backend/: .env.example  conftest.py  hatch_build.py  hatch_metadata.py  pyproject.toml
backend/alembic/: env.py
backend/app/: README.md  cli.py  cli_plugin.py  main.py  version.py
backend/app/api/: deps.py  errors.py  middleware.py  routers.py
backend/app/bootstrap/: __init__.py  frontend.py  lifespan.py  seeding.py
backend/app/bundled_plugins/: __init__.py  community.hello-0.1.0-alpha.1.ciarenplugin  community.hello-0.1.0.ciarenplugin  community.hello-0.1.0.ffplugin  community.mlp-classifier-0.2.0.ciarenplugin  community.rest-connector-0.1.0.ciarenplugin  marketplace.json
backend/app/connectors/: __init__.py  azure_blob.py  base.py  confinement.py  gcs.py  local_storage.py  mongo.py  providers.py  rest_api.py  s3.py  sql.py  ssrf.py  storage_base.py
backend/app/core/: auth.py  config.py  csrf.py  database.py  enums.py  exceptions.py  logging.py  notifications.py  runtime_settings.py  secrets.py
backend/app/db/: migrations.py
backend/app/demo/: __init__.py  datasets.py  flows.py  loader.py  seed.py
backend/app/engine/: cancellation.py  codegen.py  codegen_common.py  codegen_params.py  executor.py  graph.py  ingest.py  node_kinds.py  node_metadata.py  notebook_codegen.py  parameters.py  polars_codegen.py  preview_context.py  process_pool.py  profile.py  registry.py  run_context.py  script_guard.py  sql_codegen.py
backend/app/flow_schema/: __init__.py  document.py  migrations.py  validate.py
backend/app/migrations/: env.py
backend/app/ml/: __init__.py  availability.py  loader.py  models.py  registry_deps.py  security.py  tracking.py
backend/app/plugin_api/: README.md  __init__.py  connector_runtime.py  events.py  manifest.py  model_ref.py  node_runtime.py  providers.py  registry.py  signing.py  specs.py
backend/app/plugins/: __init__.py  adapter.py  authoring.py  builtin.py  connectors.py  install.py  license_scan.py  licensing.py  loader.py  marketplace.py  model_store.py  package.py  permission_audit.py  runtime.py  state.py
backend/app/scheduler/: __init__.py  cron.py  inflight.py  runner.py
backend/app/schemas/: app_setting.py  connection.py  dataset.py  flow.py  parameter.py  preview.py  project.py  run.py  schedule.py
backend/app/services/: app_setting_service.py  codegen_service.py  connection_service.py  dataset_resolver.py  dataset_service.py  execution_service.py  flow_service.py  ml_service.py  preview_service.py  project_service.py  run_recovery.py  schedule_service.py  sql_resolver.py  storage_resolver.py
backend/tests/: _keyring_fake.py  conftest.py  openapi_snapshot.json  route_snapshot.txt  test_app_composition.py  test_architecture_boundaries.py  test_cli.py  test_cli_ml.py  test_cli_plugin.py  test_connectors.py  test_connectors_rest_api.py  test_core_infra.py  test_demo_flow_documents.py  test_demo_seed.py  test_input_node_scan.py  test_node_catalog_contract.py  test_openapi_snapshot.py  test_route_snapshot.py  test_runtime_settings.py  test_secret_refs.py  test_serve_app.py  test_sqlite_fk_enforcement.py  test_ssrf.py  test_storage_formats.py
backend/tests/api/: test_api_auth.py  test_api_crud_findings.py  test_audit_edge_cases.py  test_catalog.py  test_connections.py  test_csrf_origin.py  test_dataset_active_run_guard.py  test_dataset_import_options.py  test_dataset_production_guard.py  test_dataset_resolver_guard.py  test_dataset_soft_delete.py  test_dataset_version_race.py  test_datasets.py  test_event_loop_responsiveness.py  test_export.py  test_export_parameters.py  test_failure_notifications.py  test_flow_duplicate.py  test_flow_import_export.py  test_flow_migrate_document.py  test_flows.py  test_ml_endpoints.py  test_ml_experiments.py  test_ml_gating.py  test_parameter_injection_risk.py  test_plugin_connectors.py  test_plugin_install_and_marketplace.py  test_plugin_management.py  test_plugin_run.py  test_plugins_endpoint.py  test_preview.py  test_project_flow_disable_cascade.py  test_projects.py  test_run_cancellation.py  test_run_parameters.py  test_run_pool_recycle.py  test_run_shutdown_finalization.py  test_run_snapshot_timeout.py  test_runs.py  test_schedules.py  (+4 more)
backend/tests/engine/: test_chart_nodes.py  test_codegen_common.py  test_codegen_equivalence.py  test_codegen_fluent.py  test_codegen_free_intermediates.py  test_codegen_params.py  test_codegen_placeholders.py  test_codegen_readability.py  test_codegen_var_reuse.py  test_engine_backends.py  test_engine_parity.py  test_engines.py  test_executor.py  test_executor_registry_race.py  test_file_output.py  test_free_tier_nodes.py  test_graph_validation.py  test_ingest.py  test_multi_output.py  test_new_nodes.py  test_node_contract.py  test_notebook_codegen.py  test_parameters.py  test_polars_codegen.py  test_polars_lazy_safety.py  test_process_pool.py  test_profile.py  test_python_transform.py  test_quality_nodes.py  test_script_guard.py  test_transformation_codegen.py  test_transformations.py  test_worker_plugin_sync.py
backend/tests/flow_schema/: test_canonical_graph.py  test_cli_flow.py  test_document.py  test_migrations.py
backend/tests/integration/: test_azure_connector.py  test_complex_flows.py  test_gcs_connector.py  test_mongo_connector.py  test_s3_connector.py  test_storage_flow.py
backend/tests/ml/: conftest.py  test_audit_fixes.py  test_availability.py  test_codegen.py  test_cross_validation.py  test_evaluate.py  test_feature_engineering.py  test_importance.py  test_integration.py  test_model_catalog.py  (+6 more)
client/: README.md  pyproject.toml
client/ciaren_client/: __init__.py  _async.py  _sync.py  _types.py
client/flowframe_client/: __init__.py  _async.py  _sync.py
client/tests/: test_client.py
(+604 files in other folders)
