[project]
name = "flowframe"
version = "0.1.0"
description = "Visual ETL builder — local-first, pandas-based"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pandas>=2.2",
    "polars>=1.0",
    "openpyxl>=3.1",
    "xlsxwriter>=3.1",
    "pyarrow>=17",
    "python-multipart>=0.0.9",
    "aiofiles>=24.0",
    "croniter>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# asyncpg drives the app's own async DATABASE_URL; psycopg is the sync driver
# the SQL connector uses (the execution engine runs off the event loop).
postgres = ["asyncpg>=0.30", "psycopg[binary]>=3.1"]
mysql = ["pymysql>=1.1"]
mssql = ["pyodbc>=5.3.0"]
mongo = ["pymongo>=4.6"]
# Tabular ML extension (scikit-learn, gradient boosting, MLflow tracking/registry).
# The base install never imports these; ML nodes are gated on ML_ENABLED + availability.
ml = [
    "scikit-learn>=1.5",
    "xgboost>=3.3.0",
    "lightgbm>=4.0",
    "mlflow>=3.0",
    "joblib>=1.3",
]
# Every optional driver in one shot. `all-connectors` is kept as an alias.
all = ["asyncpg>=0.30", "psycopg[binary]>=3.1", "pymysql>=1.1", "pyodbc>=5.3.0", "pymongo>=4.6"]
all-connectors = ["psycopg[binary]>=3.1", "pymysql>=1.1", "pyodbc>=5.3.0", "pymongo>=4.6"]

[project.scripts]
flowframe = "app.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.28.1",
    "ruff>=0.8",
    "mypy>=1.13",
    "pandas-stubs>=2.2",
    "types-croniter>=3.0",
    "psycopg[binary]>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
# The web UI is bundled into app/web by the build hook (generated, not in VCS).
artifacts = ["app/web/**"]

# Build the frontend into the wheel so `flowframe serve` serves the UI with no Node.
# Runs for wheel builds only — editable/dev installs serve the live frontend/dist.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 120
# Alembic generates these; don't lint machine-written migration scripts.
extend-exclude = ["app/migrations/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# These hold wide parametrized case tables that read better unwrapped.
"tests/engine/test_engine_backends.py" = ["E501"]
"tests/engine/test_transformation_codegen.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# Alembic generates these; they are not written to strict-typing standards.
exclude = ["app/migrations/versions/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
# SQLAlchemy's async API resumes coroutine continuations inside greenlets, and
# the executor offloads compute to worker threads; without these the tracer
# misses everything after the first `await` on the DB and the in-thread run.
concurrency = ["thread", "greenlet"]
omit = [
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if t.TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "^\\s*\\.\\.\\.\\s*$",
]
