[project]
name = "ciaren"
version = "0.1.0-alpha.1"
description = "Open-core visual data and ML workflow builder — local-first, dataframe-based"
dynamic = ["readme"]
requires-python = ">=3.12"
authors = [{ name = "Rodrigo Arenas", email = "31422766+rodrigo-arenas@users.noreply.github.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = { text = "AGPL-3.0-only" }
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pandas>=2.2",
    # >=1.21 for the min_samples rolling kwarg (min_periods is deprecated there).
    "polars>=1.21",
    "openpyxl>=3.1",
    "xlsxwriter>=3.1",
    "pyarrow>=17",
    "python-multipart>=0.0.9",
    "aiofiles>=24.0",
    "croniter>=3.0",
    "python-dotenv>=1.0",
    # Used by app/plugin_api/manifest.py to parse/compare plugin version specifiers.
    # Declared explicitly (not relied on as a transitive dep) so the slim runtime
    # image has it — otherwise `ciaren serve` fails to import in Docker.
    "packaging>=23",
    # Core ML: scikit-learn models, MLflow tracking/registry, joblib persistence.
    # Every ML node except the gradient-boosting models below runs on these —
    # they ship with the base install so `pip install ciaren` already has a
    # working Machine Learning palette. See app/ml/availability.py.
    "scikit-learn>=1.5",
    "mlflow>=3.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
# asyncpg drives the app's own async DATABASE_URL; psycopg is the sync driver
# the SQL connector uses (the execution engine runs off the event loop).
postgres = ["asyncpg>=0.30", "psycopg[binary]>=3.1"]
mysql = ["pymysql>=1.1"]
mssql = ["pyodbc>=5.3.0"]
mongo = ["pymongo>=4.6"]
# duckdb / snowflake-sqlalchemy are standalone PyPI packages rather than a
# sub-driver of a shared toolkit like the others above, but are still exposed
# as ciaren extras so providers.py's `extra` field + the UI's
# `pip install ciaren[...]` install hint stay correct for every SQL provider.
duckdb = ["duckdb>=0.10"]
snowflake = ["snowflake-sqlalchemy>=1.5.1"]
# Object / file storage drivers. The install hints surfaced by the connectors
# (s3.py / providers.py) point users at these extras.
s3 = ["boto3>=1.34"]
gcs = ["google-cloud-storage>=2.16"]
azure = ["azure-storage-blob>=12.19"]
# Gradient-boosting models only (XGBoost, LightGBM) — scikit-learn, MLflow, and
# joblib are core dependencies now, so the base install already has the rest of
# the Machine Learning palette. These two stay optional because they pull in
# native-compiled libraries (and, on Linux, need libgomp1 — see Dockerfile).
ml = [
    "xgboost>=3.3.0",
    "lightgbm>=4.0",
]
# OS keychain-backed connection secrets — the **recommended** secret source on
# desktop installs (`keyring:NAME` references and the `ciaren secret` command).
# Optional so the base install stays lean on headless servers / containers, where
# there is no keychain daemon anyway and env:/file: references apply. When it's
# absent the app degrades cleanly: the availability probe reports it, the UI
# disables the "store in keychain" action with a hint, and the `keyring:` scheme
# raises a clear "pip install ciaren[keyring]" error. Pure-Python on every OS
# (pywin32-ctypes on Windows, SecretStorage+jeepney on Linux), so no compiler.
keyring = ["keyring>=25"]
# Plugin signing / verification (Ed25519). Needed only to sign or verify signed
# `.ciarenplugin` packages; the core runs fine without it (unsigned plugins still load).
signing = ["cryptography>=42"]
# Every optional driver in one shot. `all-connectors` is kept as an alias.
all = ["asyncpg>=0.30", "psycopg[binary]>=3.1", "pymysql>=1.1", "pyodbc>=5.3.0", "pymongo>=4.6", "duckdb>=0.10", "snowflake-sqlalchemy>=1.5.1", "boto3>=1.34", "google-cloud-storage>=2.16", "azure-storage-blob>=12.19"]
all-connectors = ["asyncpg>=0.30", "psycopg[binary]>=3.1", "pymysql>=1.1", "pyodbc>=5.3.0", "pymongo>=4.6", "duckdb>=0.10", "snowflake-sqlalchemy>=1.5.1", "boto3>=1.34", "google-cloud-storage>=2.16", "azure-storage-blob>=12.19"]

[project.scripts]
ciaren = "app.cli:main"
ciaren-plugin = "app.cli_plugin:main"

[project.urls]
Homepage = "https://www.ciaren.com/"
Repository = "https://github.com/ciaren-labs/Ciaren"
Documentation = "https://ciaren.com/docs"
Issues = "https://github.com/ciaren-labs/Ciaren/issues"
Author = "https://www.linkedin.com/in/rodrigo-arenas-gomez/"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.28.1",
    "ruff>=0.8",
    "mypy>=1.13",
    "pandas-stubs>=2.2",
    "types-croniter>=3.0",
    "psycopg[binary]>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Inlines the repo-root README as the long description (see hatch_metadata.py
# for why this can't just be `readme = "../README.md"`).
[tool.hatch.metadata.hooks.custom]
path = "hatch_metadata.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]
# Runtime non-Python assets. app/web is generated by the build hook; bundled
# plugins and metadata are shipped so a fresh install has an Explore catalog.
artifacts = [
    "app/web/**",
    "app/bundled_plugins/**",
    "app/demo/resources/**",
    "app/migrations/script.py.mako",
    "app/plugin_api/LICENSE",
    "app/plugin_api/README.md",
]

# Build the frontend into the wheel so `ciaren serve` serves the UI with no Node.
# Runs for wheel builds only — editable/dev installs serve the live frontend/dist.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# Keep the sdist capable of producing the same wheel as a source checkout: the
# metadata hook needs the repo README, and the wheel hook needs the frontend
# source + lockfile to build app/web.
[tool.hatch.build.targets.sdist.force-include]
"../README.md" = "README.md"
"../frontend/package.json" = "frontend/package.json"
"../frontend/package-lock.json" = "frontend/package-lock.json"
"../frontend/index.html" = "frontend/index.html"
"../frontend/vite.config.ts" = "frontend/vite.config.ts"
"../frontend/tsconfig.json" = "frontend/tsconfig.json"
"../frontend/tsconfig.app.json" = "frontend/tsconfig.app.json"
"../frontend/tsconfig.node.json" = "frontend/tsconfig.node.json"
"../frontend/tailwind.config.js" = "frontend/tailwind.config.js"
"../frontend/postcss.config.js" = "frontend/postcss.config.js"
"../frontend/src" = "frontend/src"
"../frontend/public" = "frontend/public"

[tool.ruff]
line-length = 120
# Alembic generates these; don't lint machine-written migration scripts.
extend-exclude = ["app/migrations/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# These hold wide parametrized case tables that read better unwrapped.
"tests/engine/test_engine_backends.py" = ["E501"]
"tests/engine/test_transformation_codegen.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# The Pydantic plugin reads model config (e.g. populate_by_name) so constructing a
# model by field name is accepted, matching runtime behaviour for alias fields.
plugins = ["pydantic.mypy"]
# Alembic generates these; they are not written to strict-typing standards.
exclude = ["app/migrations/versions/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    # Tests that need a live external service (object storage, a database) — they
    # self-skip when the service's connection env vars are unset, so the default
    # suite stays infra-free. The connectors-integration CI job runs them against
    # ephemeral containers (e.g. MinIO for S3).
    "connectors: requires a live external service (object storage / database)",
]

[tool.coverage.run]
source = ["app"]
# SQLAlchemy's async API resumes coroutine continuations inside greenlets, and
# the executor offloads compute to worker threads; without these the tracer
# misses everything after the first `await` on the DB and the in-thread run.
concurrency = ["thread", "greenlet"]
omit = [
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if t.TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "^\\s*\\.\\.\\.\\s*$",
]
