[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowframe-client"
version = "0.1.0"
description = "Python client for the FlowFrame visual data and ML workflow server"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "httpx>=0.24",
]

[project.urls]
Repository = "https://github.com/rodrigo-arenas/FlowFrame"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
