[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ciaren-client"
version = "0.1.0"
description = "Python client for the Ciaren visual data and ML workflow server"
requires-python = ">=3.10"
authors = [{ name = "Rodrigo Arenas", email = "31422766+rodrigo-arenas@users.noreply.github.com" }]
license = { text = "AGPL-3.0-only" }
dependencies = [
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://www.rodrigo-arenas.com/"
Repository = "https://github.com/ciaren-labs/Ciaren"
Documentation = "https://docs.ciaren.com"
Issues = "https://github.com/ciaren-labs/Ciaren/issues"
Author = "https://www.linkedin.com/in/rodrigo-arenas-gomez/"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
