[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ciaren-client"
version = "0.1.0"
description = "Python client for the Ciaren visual data and ML workflow server"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rodrigo Arenas", email = "31422766+rodrigo-arenas@users.noreply.github.com" }]
license = { text = "Apache-2.0" }
keywords = ["ciaren", "data", "workflow", "etl", "ml", "api-client", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://www.ciaren.com/"
Repository = "https://github.com/ciaren-labs/Ciaren"
Documentation = "https://ciaren.com/docs"
Issues = "https://github.com/ciaren-labs/Ciaren/issues"
Author = "https://www.linkedin.com/in/rodrigo-arenas-gomez/"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["ciaren_client"]
artifacts = ["ciaren_client/py.typed"]

[tool.hatch.build.targets.sdist]
include = [
    "ciaren_client",
    "README.md",
    "pyproject.toml",
    "tests",
]
