[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ciaren-hello-plugin"
version = "0.1.0"
description = "Example Ciaren plugin contributing one catalog node."
requires-python = ">=3.12"
# Depends only on the Ciaren plugin contract, never on the app internals.
# (Until ciaren-plugin-api is published separately, this resolves to the
# app.plugin_api package inside the Ciaren backend.)
dependencies = []

# How an installed plugin is discovered by Ciaren's loader.
[project.entry-points."ciaren.plugins"]
hello = "ciaren_hello.plugin:HelloPlugin"

[tool.hatch.build.targets.wheel]
packages = ["ciaren_hello"]
