[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ciaren-mlp-classifier-plugin"
version = "0.2.0"
description = "Train and evaluate a scikit-learn MLPClassifier from a Ciaren node."
requires-python = ">=3.12"
dependencies = ["scikit-learn>=1.3", "pandas>=2.0"]

[project.entry-points."ciaren.plugins"]
mlp_classifier = "ciaren_mlp.plugin:MlpClassifierPlugin"

[tool.hatch.build.targets.wheel]
packages = ["ciaren_mlp"]
